--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   },
   "dependencies": {
     "expo": "~53.0.9",
+    "expo-image-picker": "~16.1.4",
+    "expo-print": "~14.1.4",
+    "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.2",
+    "react-native-qrcode-svg": "^6.3.15",
+    "react-native-svg": "15.11.2",
+    "react-native-view-shot": "^4.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0"
   },
   "private": true
 }
